WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284972
AX remote element catalyst build fix
https://bugs.webkit.org/show_bug.cgi?id=284972
Summary
AX remote element catalyst build fix
Joshua Hoffman
Reported
2024-12-19 12:23:55 PST
Build fix after
288090@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-19 12:24:06 PST
<
rdar://problem/141775941
>
Joshua Hoffman
Comment 2
2024-12-19 12:25:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38221
EWS
Comment 3
2024-12-19 12:31:21 PST
Committed
288114@main
(cc3d2837e496): <
https://commits.webkit.org/288114@main
> Reviewed commits have been landed. Closing PR #38221 and removing active labels.
Joshua Hoffman
Comment 4
2024-12-19 12:33:27 PST
rdar://141775390
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug