AX: remote element catalyst build fix https://bugs.webkit.org/show_bug.cgi?id=284972 rdar://problem/141775941

Reviewed by Tyler Wilcock.

Build fix for catalyst after 288090@main.

* Source/WebCore/accessibility/ios/AccessibilityObjectIOS.mm:
(WebCore::AXRemoteFrame::initializePlatformElementWithRemoteToken):

Canonical link: https://commits.webkit.org/288114@main